--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "ip2countrify",
-  "version": "0.0.4",
-  "description": "A Node.js wrapper for IP2Country JSON API",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha"
-  },
-  "keywords": [
-    "geoip",
-    "geolocation"
-  ],
-  "author": "Sergej Müller",
-  "homepage": "https://ip2country.info",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/sergejmueller/ip2countrify.git"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^2.5.1"
-  }
+    "name": "ip2countrify",
+    "version": "0.0.4",
+    "description": "A Node.js wrapper for IP2Country JSON API",
+    "main": "index.js",
+    "scripts": {
+        "test": "mocha"
+    },
+    "keywords": [
+        "geo",
+        "geoip",
+        "geolocation",
+        "country"
+    ],
+    "author": "Sergej Müller",
+    "homepage": "https://ip2country.info",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/sergejmueller/ip2countrify.git"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "chai": "^3.5.0",
+        "mocha": "^2.5.1"
+    }
 }
