--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "ip2countrify",
-    "version": "0.0.4",
+    "version": "0.1.0",
     "description": "A Node.js wrapper for IP2Country JSON API",
     "main": "index.js",
     "scripts": {
-        "test": "mocha"
+        "test": "mocha",
+        "lint": "eslint ."
     },
     "keywords": [
         "geo",
@@ -24,6 +25,7 @@
     "license": "MIT",
     "devDependencies": {
         "chai": "^3.5.0",
-        "mocha": "^2.5.1"
+        "mocha": "^3.1.0",
+        "eslint": "^3.7.1"
     }
 }
