--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ip2countrify",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "description": "A Node.js wrapper for IP2Country JSON API",
     "main": "index.js",
     "scripts": {
@@ -18,14 +18,15 @@
         "url": "https://sergejmueller.github.io"
     },
     "homepage": "https://ip2country.info",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/sergejmueller/ip2countrify.git"
-    },
+    "repository": "sergejmueller/ip2countrify",
     "license": "MIT",
     "devDependencies": {
         "chai": "^3.5.0",
         "mocha": "^3.1.0",
-        "eslint": "^3.7.1"
+        "eslint": "^3.8.1",
+        "eslint-plugin-node": "^2.1.3"
+    },
+    "engines": {
+        "node": ">=0.10"
     }
 }
